--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-user www-data;
+user root;
 worker_processes auto;
 pid /run/nginx.pid;
 
@@ -41,13 +41,13 @@ http {
 	error_log /var/log/nginx/error.log;
 	server {
 
-		listen   800;
+		listen   80;
 		server_name www.you.com;
 
 		#charset koi8-r;
 
-		access_log  /home/reg1/kyudo/access.log  ;
-	 	error_log /home/reg1/kyudo/error.log;
+		access_log  /home/reg1/kyudo_web/access.log  ;
+	 	error_log /home/reg1/kyudo_web/error.log;
 		location / {
 		 include        uwsgi_params;
 		 uwsgi_pass     127.0.0.1:8000;
@@ -63,11 +63,11 @@ http {
 		}
 
 		location /static/ {
-		    alias  /home/reg1/kyudo/static/;
+		    alias  /home/reg1/kyudo_web/static/;
 		    index  index.html index.htm;
 		}
                 location /upload/ {
-                    root /home/reg1/kyudo/;
+                    root /home/reg1/kyudo_web/;
                     internal;
                 }
 
@@ -91,8 +91,8 @@ http {
 	# Virtual Host Configs
 	##
 
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+	#include /etc/nginx/conf.d/*.conf;
+	#include /etc/nginx/sites-enabled/*;
 }
 
 
