--- a/mysite/site.yaml
+++ b/mysite/site.yaml
@@ -1,7 +1,7 @@
 owner: 上海正鹄会
 email: zhenggushanghai@163.com
 title: 上海正鹄会
-index: /album/index
+index: /index
 login_level: 10
 levels : 
     -   level : 1
